<!--
Full Name: Geerthan Kanthasamy
Student ID: 301033918
Section Number: 002
-->

<resources>
    <string name="app_name">GeerthanLab3</string>
    <string name="title_first">1st Fragment</string>
    <string name="title_second">2nd Fragment</string>
    <string name="title_third">3rd Fragment</string>
    <string name="topCentered">Name: Geerthan ID: 301033918</string>
    <string name="canvasClear">Clear</string>
    <string name="blackColour">Colour: Black</string>
    <string name="redColour">Colour: Red</string>
    <string name="blueColour">Colour: Blue</string>
    <string name="updatePaint">Update</string>
    <string name="runtimeService">Runtime Service</string>
    <string name="animStart">Start</string>
    <string name="animStop">Stop</string>
    <string name="speedSlow">Slow</string>
    <string name="speedNormal">Normal</string>
    <string name="speedFast">Fast</string>
    <string name="speedTurbo">Turbo</string>
</resources>